# ImgChan-Android

./: .gitignore  AndroidManifest.xml  Dockerfile.build  Makefile  build.gradle
jni/: CMakeLists.txt
jni/giflib/: CMakeLists.txt  gif.h
res/drawable/: sidebar_selected_burichan.xml  sidebar_selected_photon.xml
res/drawable-v11/: sidebar_selected_burichan.xml  sidebar_selected_neutron.xml  sidebar_selected_photon.xml
res/layout/: .sidebar_tabitem.xml.swp  action_bar_title.xml  gallery_layout_fullscreen.xml  playlist_item_layout.xml  post_item_layout.xml  postform_layout.xml  sidebar_layout.xml  sidebar_tabitem.xml
res/layout-v11/: action_bar_title.xml
res/layout-v19/: board_fragment.xml  boardslist_fragment.xml  favorites_fragment.xml  history_fragment.xml  main_activity_drawer.xml  newtab_fragment.xml  newtab_quickaccess_item.xml  sidebar_layout.xml
res/values/: attrs.xml  donottranslate.xml  ids.xml  strings.xml  styles.xml
res/values-de/: strings.xml
res/values-ru/: strings.xml
res/values-uk/: strings.xml
res/xml/: preferences.xml  provider_paths.xml
src/nya/miku/wishmaster/api/: AbstractChanModule.java  AbstractLynxChanModule.java  AbstractVichanModule.java  AbstractWakabaModule.java  CloudflareChanModule.java  HttpChanModule.java  StormwallChanModule.java
src/nya/miku/wishmaster/cache/: FileCache.java
src/nya/miku/wishmaster/common/: ACRAConstants.java  Async.java  MainApplication.java
src/nya/miku/wishmaster/http/: ExtendedMultipartBuilder.java
src/nya/miku/wishmaster/lib/: ClickableLinksTextView.java  ExtendedClickableSpan.java  (+3 more)
(+163 files in other folders)
